<resources>
    <string name="app_name">My Interesting Life</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_new">New event</string>
    <string name="event_name_hint">Event name</string>
    <string name="event_date_hint">Event date</string>
    <string name="event_description_hint">Event description</string>
    <string name="event_save_button">Save event</string>
    <string name="event_search_button">Search event</string>
    <string name="event_pick_image_button">Pick images</string>
    <string name="date_format">%1$s / %2$s / %3$d</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_preview">Preview</string>
    <string name="title_delete">Delete</string>
    <string name="title_edit">Edit</string>
    <string name="title_back">Back</string>
</resources>